# Projet-4-Classifiez-automatiquement-des-informations

./: main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb  pyproject-checkpoint.toml
